# mlflow-example

./: .gitignore  data_processing.py  mydb.sqlite  nn_model.py  nn_model_hpt.py  predict.py  pyproject.toml  simple_model.py  simple_model_hpt.py
mlruns/1/0343de5a5902416eaede5ba2283b4ffa/artifacts/model/: MLmodel  model.pkl
mlruns/1/1aa95d8f07ff47dcaaae6e99d5f7040f/artifacts/model/: MLmodel
mlruns/1/237d3b07668e4f2dbd7e8d89380e77a0/artifacts/model/: MLmodel  model.pkl
mlruns/1/2821955757ec46329809239fb23ae48e/artifacts/model/: MLmodel  model.pkl
mlruns/1/2853399641244e618c9215a56a9f081f/artifacts/model/: MLmodel  model.pkl
mlruns/1/28a4bf906fe541ccb5c0373c2d107172/artifacts/model/: MLmodel  model.pkl
mlruns/1/4155cbc4583b4e7fba6df4ddb87dcd66/artifacts/model/: MLmodel  model.pkl
mlruns/1/51bc66165faf4abdb123af33b27cf161/artifacts/model/: MLmodel
mlruns/1/57eb47e3358c4fe4a9e2af4b2a6274cd/artifacts/model/: MLmodel  model.pkl
mlruns/1/596afe74359c460697b6d3efbb15b072/artifacts/model/: MLmodel  model.pkl
mlruns/1/7a021149a3ba4f14a19c17a31483ad0d/artifacts/model/: MLmodel  model.pkl
mlruns/1/9d5deb5c465147318f2853bfe37738e4/artifacts/model/: MLmodel
mlruns/1/a4555798257f45ecaf5011cbc5899759/artifacts/model/: MLmodel  model.pkl
mlruns/1/b390b5f645884ea1838061b2a2ac732c/artifacts/model/: MLmodel  model.pkl
mlruns/1/b7f0437f62d74401a78f6030ec5c5d54/artifacts/model/: MLmodel  model.pkl
mlruns/1/ce91ce5369b24c4a98fd6478e08f8271/artifacts/model/: MLmodel  model.pkl
mlruns/1/d021ffbe42664ecdb117e74c40de5496/artifacts/model/: MLmodel
(+4 files in other folders)
