[tool.poetry]
name = "mlflow-example"
version = "0.1.0"
description = ""
authors = ["Sylvain <sylvain@synapse-medicine.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.23.0"
sklearn = "^0.0"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
