[tool.poetry]
name = "mlflow-example"
version = "0.1.0"
description = ""
authors = ["Sylvain <sylvain@synapse-medicine.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.1.1"
numba = "^0.56.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
